# VcarlotoED2018

./: .gitignore  README.md
Remake/: CMakeLists.txt
Remake/src/: Makefile  auxfig.c  auxfig.h  basicshapes.c  basicshapes.h  btree.c  btree.h  carro.c  carro.h  cidade.c  cidade.h  circle.c  circle.h  closestpair.c  closestpair.h  color.c  color.h  estabelecimento.c  estabelecimento.h  filehandling.c  filehandling.h  genericlist.c  genericlist.h  grafo.c  grafo.h  hidrante.c  hidrante.h  linkedist.c  linkedist.h  main.c  miscfunctions.c  miscfunctions.h  moradia.c  moradia.h  pessoa.c  pessoa.h  ponto.c  ponto.h  quadra.c  quadra.h  (+11 more)
Trabalho3/src/: Makefile  arquivo.c  arquivo.h  functions.c  functions.h  geometricas.c  geometricas.h  hidrante.c  hidrante.h  mergesort.c  mergesort.h  misc.c  misc.h  qryfunctions.c  qryfunctions.h  quadra.c  quadra.h  semaforo.c  semaforo.h  siguel  t3.c  torre.c  torre.h
